--- a/www/index.html
+++ b/www/index.html
@@ -27,34 +27,49 @@
 	<body onLoad="getStations()">
 		<div class="container">
 			<div class="page-header">
-				<h2>Pandora Web Client For NodeJS <small><div id="username"></div></small></h2>
+				<h3>Pandora Web Client For NodeJS <small><div id="username"></div></small></h3>
 				
 			</div>
 				<div class="row">
-					<div class="col-md-5 col-md-offset-1">
+					<div class="col-md-6">
 						<h3>Player</h3>
+						<center>
 						<div id="audioTitle"></div>
-						<audio controls autoplay id="audioPlayer">
-  							Your browser does not support the audio tag.
-						</audio><br />
-						<button class="btn btn-small btn-default" onClick="playPrev()"><span class="glyphicon glyphicon-backward"></span></button>
-						<button class="btn btn-small btn-default" onClick="pause()"><span class="glyphicon glyphicon-pause"></span></button>
-						<button class="btn btn-small btn-default" onClick="playNext()"><span class="glyphicon glyphicon-forward"></span></button>
+							<div class="" id="buttons">
+								<br />
+								<br />
+								<br />
+								<audio controls autoplay id="audioPlayer">
+									Your browser does not support the audio tag.
+								</audio><br />
+								<button class="btn btn-lg btn-default" onClick="playPrev()"><span class="glyphicon glyphicon-backward"></span></button>
+								<button class="btn btn-lg btn-default" onClick="pause()"><span class="glyphicon glyphicon-pause"></span></button>
+								<button class="btn btn-lg btn-default" onClick="playNext()"><span class="glyphicon glyphicon-forward"></span></button>
+								<br />
+								<br />
+								<br />
+							</div>
+						</center>
 					</div>
 					<div class="col-md-6">
 						<h3>Stations</h3>
-						<div id="stationTable" style="overflow-y:scroll; height:400px;">
+						<div id="stationTable" style="overflow-y:scroll; height:200px;">
 							
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" hidden>
 					<div class="col-md-12">
-      					<div class="textwrapper"><textarea cols="30" rows="5" name="" id="log" class="boxsizingBorder" disabled></textarea></div>
+      					<div class="textwrapper"><textarea cols="30" rows="5" name="" id="log" class="boxsizingBorder" disabled hidden></textarea></div>
 					</div>
 				</div>
 		</div>
 		<script>
+		//Mobile Check:
+		if (navigator.userAgent.match(/Mobile/)) {
+			document.getElementById('buttons').className = 'navbar-fixed-bottom';
+		}
+		
 		var listCount = 0;
 		var currentCount = 0;
 		var prevList = [];
