--- a/www/index.html
+++ b/www/index.html
@@ -168,8 +168,14 @@
     					//console.info(msg);
     					var string = '<table class="table">';
     					var obj = JSON.parse(msg);
-    					for (i = 0; i < obj.length; i++) { 
-    						string = string + '\n<tr><td><a href="#" onclick="setStation(\''+ obj[i].stationToken +'\')">' + obj[i].stationName + '</a></td></tr>';
+						var byName = obj.slice(0);
+						byName.sort(function(a,b) {
+							var x = a.stationName.toLowerCase();
+							var y = b.stationName.toLowerCase();
+							return x < y ? -1 : x > y ? 1 : 0;
+						});
+    					for (i = 0; i < byName.length; i++) { 
+    						string = string + '\n<tr><td><a href="#" onclick="setStation(\''+ byName[i].stationToken +'\')">' + byName[i].stationName + '</a></td></tr>';
     					}
     					string = string + "</table>";
         				document.getElementById("stationTable").innerHTML = string;
